syntax = "proto3";
package pb;
option go_package = "internal/infra/grpc/pb";

message ChatRequest {
  optional string chatId = 1;
  string userId = 2;
  string userMessage = 3;
}

message ChatResponse {
  string chatId = 1;
  string userId = 2;
  string content = 3;
}

service ChatService {
  rpc ChatStream(ChatRequest) returns (stream ChatResponse) {}
}